--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tanstack-cacher",
-  "version": "1.2.1",
+  "version": "1.3.1",
   "description": "A lightweight cache management utility for TanStack Query that simplifies adding, updating, deleting, and synchronizing cached data",
   "license": "MIT",
   "repository": {
@@ -28,26 +28,30 @@
     "cache-manager",
     "optimistic-updates"
   ],
-  "main": "./dist/index.js",
-  "module": "./dist/index.mjs",
-  "types": "./dist/index.d.ts",
+  "main": "./index.js",
+  "module": "./index.js",
+  "types": "./index.d.ts",
+  "files": [
+    "index.js",
+    "index.d.ts",
+    "styles",
+    "LICENSE",
+    "README.md"
+  ],
   "exports": {
     ".": {
-      "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.js"
-    }
+      "types": "./index.d.ts",
+      "import": "./index.js"
+    },
+    "./package.json": "./package.json"
   },
-  "files": [
-    "dist",
-    "README.md",
-    "LICENSE"
-  ],
   "engines": {
     "node": ">=16"
   },
   "scripts": {
-    "build": "tsup",
+    "build": "tsup && npm run copy-dist",
+    "copy-dist": "cp dist/index.js index.js && cp dist/index.d.ts index.d.ts && cp -r dist/styles styles",
+    "locale-build": "tsup",
     "dev": "tsup --watch",
     "lint": "eslint src --ext .ts,.tsx",
     "lint:fix": "eslint src --ext .ts,.tsx --fix",
