added cache provider, refactored usecustommutation hook

--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
       "name": "Hasanli Hajagha",
       "email": "hacagahasanli@gmail.com",
       "web": "http://github.com/hacagahasanli"
+    },
+    {
+      "name": "Sahira Mammadova",
+      "email": "mammadovasahira@gmail.com",
+      "web": "https://github.com/SahiraMamedova"
     }
   ],
   "homepage": "https://github.com/hacagahasanli/tanstack-cacher#readme",
